[gd_scene load_steps=2 format=3 uid="uid://xyqxme7s23cj"]

[ext_resource type="Script" path="res://mod/ecorebirth/scripts/archive_menu.gd" id="1_qdjpa"]

[node name="ArchiveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdjpa")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMini"
text = "Archive"

[node name="ArchiveBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
